--- a/static/main.css
+++ b/static/main.css
@@ -7,7 +7,7 @@
   font-family: 'SPORT';
 
 }
-* {
+*, div {
   outline: none;
   box-sizing: border-box;
 }
@@ -23,7 +23,7 @@ img {
 
 :root {
   --body-font: "Inter", sans-serif;
-  --theme-bg: #1f1d2b;
+  --theme-bg: #111114;
   --body-color: #808191;
   --button-bg: #353340;
   --border-color: rgb(128 129 145 / 24%);
@@ -69,7 +69,6 @@ body:before {
   display: flex;
   overflow: hidden;
   width: 100%;
-  border-radius: 20px;
   font-size: 15px;
   font-weight: 500;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
@@ -222,87 +221,7 @@ body:before {
   padding: 30px;
 }
 
-.search-bar {
-  height: 34px;
-  display: flex;
-  width: 100%;
-  max-width: 450px;
-}
-.search-bar input {
-  width: 100%;
-  height: 100%;
-  border: none;
-  background-color: var(--button-bg);
-  border-radius: 8px;
-  font-family: var(--body-font);
-  font-size: 14px;
-  font-weight: 500;
-  padding: 0 40px 0 16px;
-  box-shadow: 0 0 0 2px rgba(134, 140, 160, 0.02);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 56.966 56.966' fill='%23717790c7'%3e%3cpath d='M55.146 51.887L41.588 37.786A22.926 22.926 0 0046.984 23c0-12.682-10.318-23-23-23s-23 10.318-23 23 10.318 23 23 23c4.761 0 9.298-1.436 13.177-4.162l13.661 14.208c.571.593 1.339.92 2.162.92.779 0 1.518-.297 2.079-.837a3.004 3.004 0 00.083-4.242zM23.984 6c9.374 0 17 7.626 17 17s-7.626 17-17 17-17-7.626-17-17 7.626-17 17-17z'/%3e%3c/svg%3e");
-  background-size: 14px;
-  background-repeat: no-repeat;
-  background-position: 96%;
-  color: #fff;
-}
 
-.user-settings {
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  flex-shrink: 0;
-  margin-left: auto;
-}
-.user-settings svg {
-  width: 10px;
-  flex-shrink: 0;
-}
-@media screen and (max-width: 575px) {
-  .user-settings svg {
-    display: none;
-  }
-}
-.user-settings .notify {
-  position: relative;
-}
-.user-settings .notify svg {
-  width: 20px;
-  margin-left: 24px;
-  flex-shrink: 0;
-}
-.user-settings .notify .notification {
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #ec5252;
-  position: absolute;
-  right: 1px;
-  border: 1px solid var(--theme-bg);
-  top: -2px;
-}
-@media screen and (max-width: 575px) {
-  .user-settings .notify .notification {
-    display: none;
-  }
-}
-.user-img {
-  width: 30px;
-  height: 30px;
-  flex-shrink: 0;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 50%;
-}
-.user-name {
-  color: #fff;
-  font-size: 14px;
-  margin: 0 6px 0 12px;
-}
-@media screen and (max-width: 575px) {
-  .user-name {
-    display: none;
-  }
-}
 
 .main-container {
   display: flex;
@@ -325,7 +244,7 @@ body:before {
   position: sticky;
   top: 0;
   left: 0;
-  background: linear-gradient(to bottom, #1f1d2b 0%, #1f1d2b 78%, rgba(31, 29, 43, 0) 100%);
+  background: linear-gradient(to bottom, #111114 0%, #111114 78%, rgba(31, 29, 43, 0) 100%);
   z-index: 11;
 }
 
@@ -336,74 +255,9 @@ body:before {
   margin: 30px 0 20px;
 }
 
-.main-blogs {
-  display: flex;
-  align-items: center;
-}
-.main-blog__author {
-  display: flex;
-  align-items: center;
-  padding-bottom: 10px;
-}
-.main-blog__author.tips {
-  flex-direction: column-reverse;
-  align-items: flex-start;
-}
-.main-blog__title {
-  font-size: 25px;
-  max-width: 12ch;
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: #fff;
-  margin-bottom: 30px;
-}
-.main-blog {
-  background-image: url("/uniform.png");
-  background-size: 70%;
-  background-position-x: 170px;
-  background-position-y: 50px;
-  background-color: #31abbd;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 30px;
-  border-radius: 20px;
-  align-self: stretch;
-  overflow: hidden;
-  position: relative;
-  transition: background 0.3s;
-  background-repeat: no-repeat;
-}
-.main-blog + .main-blog {
-  margin-left: 20px;
-  width: 35%;
-  background-image: url(https://c0.anyrgb.com/images/1020/945/venice-beach-2018-outdoors-sport-men-jumping-desert-sunset-extreme-sports-one-person-action.jpg);
-  background-color: unset;
-  background-position-x: 0;
-  background-size: 139%;
-  filter: saturate(1.4);
-}
-.main-blog + .main-blog .author-img {
-  border-color: rgba(255, 255, 255, 0.75);
-  margin-top: 14px;
-}
-.main-blog + .main-blog .author-img__wrapper svg {
-  border-color: #ffe6b2;
-  color: #e7bb7d;
-}
-.main-blog + .main-blog .author-detail {
-  margin-left: 0;
-}
+
 @media screen and (max-width: 905px) {
-  .main-blog, .main-blog + .main-blog {
-    width: 50%;
-    padding: 30px;
-  }
-  .main-blog {
-    background-size: cover;
-    background-position-x: center;
-    background-blend-mode: overlay;
-  }
+
   .banner{
     background-image:url('/banner-mobile.webp');
     background-size: cover;
@@ -420,55 +274,9 @@ body:before {
 }
 
 
-.main-blog__time {
-  background: rgba(21, 13, 13, 0.44);
-  color: #fff;
-  padding: 3px 8px;
-  font-size: 12px;
-  border-radius: 6px;
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
-}
 
-.author-img {
-  width: 52px;
-  height: 52px;
-  border: 1px solid rgba(255, 255, 255, 0.75);
-  padding: 4px;
-  border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.author-img__wrapper {
-  position: relative;
-  flex-shrink: 0;
-}
-.author-img__wrapper svg {
-  width: 16px;
-  padding: 2px;
-  background-color: #fff;
-  color: #0daabc;
-  border-radius: 50%;
-  border: 2px solid #0daabc;
-  position: absolute;
-  bottom: 5px;
-  right: 0;
-}
-.author-name {
-  font-size: 15px;
-  color: #fff;
-  font-weight: 500;
-  margin-bottom: 8px;
-}
-.author-info {
-  font-size: 13px;
-  font-weight: 400;
-  color: #fff;
-}
-.author-detail {
-  margin-left: 16px;
-}
+
+
 
 .seperate {
   width: 3px;
@@ -617,7 +425,7 @@ video {
   display: flex;
 }
 .show .main-header,
-.show .main-blogs,
+
 .show .small-header,
 .show .videos {
   display: none;
@@ -643,16 +451,12 @@ video {
   top: 0;
   left: 0;
 }
-.video-p .author-img {
-  border: 0;
-}
+
 .video-p-wrapper {
   display: flex;
   align-items: center;
 }
-.video-p-wrapper .author-img {
-  border: 0;
-}
+
 .video-p-wrapper svg {
   width: 20px;
   padding: 4px;
@@ -914,9 +718,7 @@ video {
 .message:last-child {
   margin-bottom: 18px;
 }
-.message-container .author-img__wrapper svg {
-  width: 15px;
-}
+
 
 .msg__name {
   font-size: 13px;
@@ -1056,46 +858,19 @@ button.vjs-play-control.vjs-control.vjs-button {
 }
 
 @media screen and (max-width: 735px) {
-  .main-blogs {
-    flex-wrap: wrap;
-  }
-
-  .main-blog,
-.main-blog + .main-blog {
-    width: 100%;
-  }
+  
 
   .videos {
     grid-template-columns: 1fr;
   }
 
-  .main-blog + .main-blog {
-    margin-left: 0;
-    margin-top: 20px;
-    background-size: cover;
-  }
+  
 }
 @media screen and (max-width: 475px) {
-  .main-blog__title {
-    font-size: 20px;
-  }
 
-  .author-name {
-    font-size: 14px;
-  }
 
-  .main-blog__author {
-    flex-direction: column-reverse;
-    align-items: flex-start;
-  }
 
-  .author-detail {
-    margin-left: 0;
-  }
 
-  .main-blog .author-img {
-    margin-top: 14px;
-  }
 
   .main-container {
     padding: 0 20px 20px;
@@ -1131,4 +906,119 @@ button.vjs-play-control.vjs-control.vjs-button {
 ::-webkit-scrollbar-thumb {
   background-color: rgba(21, 20, 26, 0.63);
   border-radius: 10px;
+}
+
+
+
+
+
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
+
+:root {
+  --color-text-primary: #1c2a38;
+  --color-text-secondary: #8a8f98;
+  --color-text-alert: #d72641;
+  --color-text-icon: #dbdade;
+  --color-bg-primary: #fff;
+  --color-bg-secondary: #f3f5f9;
+  --color-bg-alert: #fdeaec;
+  --color-theme-primary: #623ce6;
+}
+
+
+
+
+
+.team {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.team-logo {
+ 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: var(--color-bg-primary);
+  box-shadow: 0 4px 4px 0 rgba(48, 48, 48, 0.15), 0 0 0 15px var(--color-bg-secondary);
+}
+.team-logo img {
+  width: 50px;
+}
+
+.team-name {
+  text-align: center;
+  margin-top: 24px;
+  
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.match-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.match-date,
+.match-referee {
+  font-size: 14px;
+  color: var(--color-text-secondary);
+}
+.match-date strong,
+.match-referee strong {
+  color: var(--color-text-primary);
+}
+
+.match-score {
+  margin-top: 12px;
+  display: flex;
+  align-items: center;
+}
+
+.match-score-number {
+  font-size: 48px;
+  font-weight: 600;
+  line-height: 1;
+}
+.match-score-number--leading {
+  color: var(--color-theme-primary);
+}
+
+.match-score-divider {
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1;
+  color: var(--color-text-icon);
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.match-time-lapsed {
+  color: #df9443;
+  font-size: 14px;
+  font-weight: 600;
+  margin-top: 8px;
+}
+
+.match-referee {
+  margin-top: 12px;
+}
+
+
+
+
+.container2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
